Minor Fixes in regards to padding and container spacing

--- a/order-system/src/pages/About.css
+++ b/order-system/src/pages/About.css
@@ -1,5 +1,26 @@
- h2 {
+.about-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 78vh;
+    background-color: #ffffff;
+}
+
+h1 {
+    font-size: 4rem;
+    margin-bottom: 2rem;
+    color: #f1356d;
+}
+
+p {
     font-size: 2rem;
     margin-bottom: 1rem;
-    color: black
-  }
+    color: gray;
+}
+  
+h2 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  color: rgb(0, 0, 0);
+}
