--- a/order-system/src/pages/FAQ.css
+++ b/order-system/src/pages/FAQ.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background-color: #f7f7f7;
+    height: 50vh;
+    background-color: #ffffff;
   }
   
   h1 {
