--- a/order-system/src/pages/Home.css
+++ b/order-system/src/pages/Home.css
@@ -10,12 +10,12 @@
   h1 {
     font-size: 4rem;
     margin-bottom: 1rem;
-    color: #dc1721;
+    color: #8a0dff;
   }
   
   p {
     font-size: 1.5rem;
-    color: #333;
+    color: #fd3737;
   }
   img {
     height: 300px;
